src/sass/modules/_thumbnailGrid.scss
#grid-gallery {
    border-top: 1px solid var(--color-text);
    border-bottom: 1px solid var(--color-text);
}
#grid-gallery,
#grid-gallery.sorted > li > ul {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    align-items: flex-start;
    padding: 0;
    width: 100%;
    margin: 0 auto;
    &,
    & ul {
        list-style-type: none;
        padding: 0;
    }
}

#grid-gallery.sorted {
    display: block;
}
ul#grid-gallery {
    flex: 0 1 100%;
    padding: 0.5em 0 0 0;
    flex-flow: row wrap;
    justify-content: flex-start;
    @include breakpoint(sm) {
        // justify-content: space-evenly;
    }
}

ul#grid-gallery.sorted ul {
    justify-content: start;
}

ul#grid-gallery li {
    position: relative;
    flex: 0 5 47.5%;

    @include breakpoint(xs) {
        flex: 0 5 47.5%;
        max-width: 47.5%;
    }
    @include breakpoint(sm) {
        flex: 0 1 30.8%;
        max-width: 30.8%;
    }
    @include breakpoint(md) {
        flex: 0 5 22.5%;
        max-width: 22.5%;
    }
    @include breakpoint(lg) {
        flex: 0 5 17.5%;
        max-width: 17.5%;
    }
    margin: 0.5em 1.25%;
}

#grid-gallery.sorted > li {
    margin-left: 0;
    margin-right: 0;
    max-width: unset;
    .list-title {
        margin-left: 1.25%;
        text-transform: capitalize;
    }
    & > ul > li {
        margin-left: 1.25%;
        margin-right: 1.25%;
    }
}
#grid-gallery li a {
    display: block;
    text-decoration: none;
    background: var(--color-interactive);
    @media (hover: hover) {
        &:hover {
            h2,
            p,
            small {
                color: var(--color-hover);
            }
            transition: all 0.15s ease-out;

            figure img {
                opacity: 0.25;
                filter: blur(4px);
            }
            box-shadow: 0 0 0 4px var(--color-hover);
        }
    }
}
#grid-gallery li a figure {
    position: relative;
    padding: 0;
    margin: 0;
}

#grid-gallery li a figure img {
    float: left;
    display: block;
    width: 100%;
    height: auto;

    &::after {
        content: '';
        display: table;
        float: none;
        clear: both;
    }
}
#grid-gallery li {
    a {
        padding: 0;
    }
    a figure {
        @media (hover: hover) {
            position: relative;
            overflow: hidden;
            color: var(--color-hover);
        }
    }
    a figure figcaption {
        padding: 0.5em;
        @include breakpoint(md) {
            padding: 1em;
        }
        @media (hover: hover) {
            position: absolute;
            display: block;
            top: 0;
            left: 0;
            width: calc( 100% - 2em );
            height: 100%;
            transform: translate(0, 100%);
            transition: all 0.15s ease-out;
        }
    }
    a:hover figure figcaption {
        @media (hover: hover) {
            transform: translate(0, 0);
        }
    }

    a figure figcaption::before {
        content: '';
        display: table;
        float: none;
        clear: both;
    }

    h2 {
        font-size: 1.4em;

        @include breakpoint(md) {
            font-size: 2vw;
            margin-bottom: 0;
            hyphens: auto;
        }
    }
    .project-title {
        margin-top: 0.5em;
        display: block;
        position: relative;
    }
    p,
    small {
        display: block;
    }
}

